system: Fix MOTD text alignment
Closes #13611

--- a/pkg/systemd/overview-cards/motdCard.scss
+++ b/pkg/systemd/overview-cards/motdCard.scss
@@ -1,8 +1,10 @@
 #motd {
+    --motd--font-size: var(--pf-global--FontSize--sm);
     background-color: transparent;
     border: none;
-    font-size: 14px;
-    padding: 0px;
-    margin: 0px;
+    font-size: var(--motd--font-size);
+    // Account for the difference in font sizes, so the text lines up
+    margin: calc(var(--pf-c-alert__title--FontSize) - var(--motd--font-size)) 0 0;
+    padding: 0;
     white-space: pre-wrap;
 }
